--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
     <img src="./assets/images/eric_headshot.jpg" alt="Eric Peterson headshot" />
 
     <section id="about-me" class="subsection">
-        <h2>About Me</h2>
+        <h2 class="subheader">About Me</h2>
             <h3>I currently work as a senior operations analyst at an education technology company named Guild. My day-to-day consists of synthesizing & auditing data but has gradually required more techinical skills. This led to SQL and Python courses, after which I decided to continue my learning and enroll in the 2U/UT coding bootcamp. I'm excited about the education I'm about to receive in this intensive program. I'll be updating this portfolio to exhibit my projects and demonstrate my learnings!</h3>
     </section>
     <section id="my-work" class="subsection">
-        <h2>My Work</h2>
+        <h2 class="subheader">My Work</h2>
             
     </section>
     <section id="contact-me" class="subsection">
-        <h2>Contact Me</h2>
+        <h2 class="subheader">Contact Me</h2>
     </section>
     
    
