Added a new section for headshot, added a grid layout to the body, formatted the subheadins and 'about me' section

--- a/index.html
+++ b/index.html
@@ -19,19 +19,22 @@
         </nav>
     </header>
 
-    <main>
-    <img src="./assets/images/eric_headshot.jpg" alt="Eric Peterson headshot" />
+    <section id="headshot">
+        <img src="./assets/images/eric_headshot.jpg" alt="Eric Peterson headshot" />
+        <h2>Thank you for visiting my page!</h2>
+    </section>
 
-    <section id="about-me" class="subsection">
-        <h2 class="subheader">About Me</h2>
-            <h3>I currently work as a senior operations analyst at an education technology company named Guild. My day-to-day consists of synthesizing & auditing data but has gradually required more techinical skills. This led to SQL and Python courses, after which I decided to continue my learning and enroll in the 2U/UT coding bootcamp. I'm excited about the education I'm about to receive in this intensive program. I'll be updating this portfolio to exhibit my projects and demonstrate my learnings!</h3>
+    <main>
+    <section id="about-me">
+        <h2>About Me</h2>
     </section>
-    <section id="my-work" class="subsection">
-        <h2 class="subheader">My Work</h2>
-            
+    <section id="about-me-text">
+        <h3>I currently work as a senior operations analyst at Guild, an education technology company based in Denver. My day-to-day consists of synthesizing & auditing data but has gradually required more techinical skills. This led to learning various coding languages such as SQL and Python, throughout which I've developed a wider interest in software development. I'm now enrolled in the coding bootcamp at 2U/UT Austin Texas, where I'm learning programming / software development essentials. I'll be updating this portfolio to exhibit my projects and demonstrate my learnings!</h3>    </section>
+    <section id="my-work">
+        <h2>My Work</h2>      
     </section>
-    <section id="contact-me" class="subsection">
-        <h2 class="subheader">Contact Me</h2>
+    <section id="contact-me">
+        <h2>Contact Me</h2>
     </section>
     
    
