added more to the project section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>Eric Peterson's Web Dev Portfolio</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
 </head>
 
@@ -13,29 +12,47 @@
     <header>
         <h1>Eric Peterson's Portfolio</h1>
         <nav>
-            <a href="#about-me">About Me</a>
-            <a href="#my-work">My Work</a>
-            <a href="#contact-me">Contact</a>
+            <a href="#about-me"><b>About Me</b></a>
+            <a href="#my-work"><b>My Work</b></a>
+            <a href="#contact-me"><b>Contact Me</b></a>
         </nav>
     </header>
 
     <section id="headshot">
-        <img src="./assets/images/eric_headshot.jpg" alt="Eric Peterson headshot" />
+        <img src="./assets/images/eric_headshot.jpg" alt="Eric Peterson headshot"/>
         <h2>Thank you for visiting my page!</h2>
     </section>
 
     <main>
-    <section id="about-me">
-        <h2>About Me</h2>
-    </section>
-    <section id="about-me-text">
-        <h3>I currently work as a senior operations analyst at Guild, an education technology company based in Denver. My day-to-day consists of synthesizing & auditing data but has gradually required more techinical skills. This led to learning various coding languages such as SQL and Python, throughout which I've developed a wider interest in software development. I'm now enrolled in the coding bootcamp at 2U/UT Austin Texas, where I'm learning programming / software development essentials. I'll be updating this portfolio to exhibit my projects and demonstrate my learnings!</h3>    </section>
-    <section id="my-work">
-        <h2>My Work</h2>      
-    </section>
-    <section id="contact-me">
-        <h2>Contact Me</h2>
-    </section>
+        <div id="about-me" class="subsection">
+            <h2>About Me</h2>
+        </div>
+        <div id="about-me-text">
+            <h3>I currently work as a senior operations analyst at Guild, an education technology company based in Denver. My day-to-day consists of synthesizing & auditing data but has gradually required more techinical skills. This led to learning various coding languages such as SQL and Python, throughout which I've developed a wider interest in software development. I'm now enrolled in the coding bootcamp at 2U/UT Austin Texas, where I'm learning programming / software development essentials. I'll be updating this portfolio to exhibit my projects and demonstrate my learnings!</h3>    
+        </div>
+        <div id="my-work" class="subsection">
+            <h2>My Work</h2>
+        </div>
+        <div id="html-css" class="project">
+            <h3>HTML/CSS Refactor</h3>
+        </div>
+        <div id="prework-studyguide" class="project">
+            <h3>Prework Study Guide</h3>
+        </div>
+        <div id="placeholder-1" class="project">
+            <h3>Placeholder</h3>
+        </div>    
+        <div id="placeholder-2" class="project">
+            <h3>Placeholder</h3>
+        </div>
+        <div id="placeholder-3" class="project">
+            <h3>Placeholder</h3>   
+        </div>
+        </div>
+        <div id="contact-me" class="subsection">
+            <h2>Contact Me</h2>\
+        </div>
+    </main>
     
    
 
