--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Eric Peterson's Portfolio</h1>
+        <h1 style="padding-top: 100px">Eric Peterson's Portfolio</h1>
         <nav>
             <a href="#about-me"><b>About Me</b></a>
             <a href="#my-work"><b>My Work</b></a>
@@ -28,26 +28,26 @@
             <h2>About Me</h2>
         </div>
         <div id="about-me-text">
-            <h3>I currently work as a senior operations analyst at Guild, an education technology company based in Denver. My day-to-day consists of synthesizing & auditing data but has gradually required more techinical skills. This led to learning various coding languages such as SQL and Python, throughout which I've developed a wider interest in software development. I'm now enrolled in the coding bootcamp at 2U/UT Austin Texas, where I'm learning programming / software development essentials. I'll be updating this portfolio to exhibit my projects and demonstrate my learnings!</h3>    
+            <p>I currently work as a senior operations analyst at Guild, an education technology company based in Denver. My day-to-day consists of synthesizing & auditing data but has gradually required more techinical skills. This led to learning various coding languages such as SQL and Python, throughout which I've developed a wider interest in software development. I'm now enrolled in the coding bootcamp at 2U/UT Austin Texas, where I'm learning programming / software development essentials. I'll be updating this portfolio to exhibit my projects and demonstrate my learnings!</p>    
         </div>
         <div id="my-work" class="subsection">
             <h2>My Work</h2>
         </div>
-        <div id="html-css" class="project">
-            <h3><a class="btn btn-link" href="https://ericlyn4s.github.io/html-css-accessibility-refactor">HTML/CSS Refactor</a></h3>
-        </div>
-        <div id="prework-studyguide" class="project">
-            <h3><a class="btn btn-link" href="https://ericlyn4s.github.io/prework-study-guide/">Prework Study Guide</a></h3>
-        </div>
-        <div id="placeholder-1" class="project">
+        <a id="html-css" class="project" href="https://ericlyn4s.github.io/html-css-accessibility-refactor">
+            <h3>HTML/CSS Refactor</h3>
+        </a>
+        <a id="prework-studyguide" class="project" href="https://ericlyn4s.github.io/prework-study-guide/">
+            <h3>Prework Study Guide</h3>
+        </a>
+        <a id="placeholder-1" class="project">
             <h3>Placeholder</h3>
-        </div>    
-        <div id="placeholder-2" class="project">
+        </a>    
+        <a id="placeholder-2" class="project">
             <h3>Placeholder</h3>
-        </div>
-        <div id="placeholder-3" class="project">
+        </a>
+        <a id="placeholder-3" class="project">
             <h3>Placeholder</h3>   
-        </div>
+        </a>
         </div>
         <div id="contact-me" class="subsection">
             <h2>Contact Me</h2>
