Fixed the navigation links

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header>
         <h1>Eric Peterson's Portfolio</h1>
         <nav>
-            <a href="#about-me"><b>About Me</b></a>
-            <a href="#my-work"><b>My Work</b></a>
-            <a href="#contact-me"><b>Contact Me</b></a>
+            <a href="#about-me-title"><b>About Me</b></a>
+            <a href="#my-work-title"><b>My Work</b></a>
+            <a href="#contact-me-title"><b>Contact Me</b></a>
         </nav>
     </header>
 
